# cmake

./: CMakeLists.txt  FindSDL2.cmake  fun.c  main.c  readme.md  toolchain.cmake
include/: fun.h
